<resources>
    <string name="app_name">Kotlin_Point</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="registration">Register user</string>
    <string name="logout">Logout</string>
    <string name="reset_email">Reset email</string>
    <string name="enter_email">Введите Email</string>
    <string name="enter_existing_email">Введите существующий Email</string>
    <string name="check_email_change_pass">Проверте почту для изменения пароля!</string>
    <string name="try_again_error">Попробуйте еще раз! Что-то пошло не так!</string>
    <string name="verify_account">Проверте почту для подтверждения вашего аккаунта!</string>
    <string name="error_pass_email">Введен неверный логин или пароль. Пожалуста проверте данныйе или зарегистрируйтесь!</string>
    <string name="enter_pass">Введите проль</string>
    <string name="short_pass">Длина пароля должна быть больше 6 символов</string>
    <string name="user_registered">Пользователь успешно зарегестрирован!</string>
    <string name="not_registered">Пользователь не зарегестрирован! Попробуйте еще раз!</string>
</resources>